sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:6: error: not found: value j
    for (i <- j to getNombreValeurs()-2-j) {
              ^AlgCocktailSort2:6: error: not found: value j
    for (i <- j to getNombreValeurs()-2-j) {
                                        ^AlgCocktailSort2:12: error: not found: value j
    for (i <- j to getNombreValeurs()-2-j) {
              ^AlgCocktailSort2:12: error: not found: value j
    for (i <- j to getNombreValeurs()-2-j) {
                                        ^